# godot-rs-template

./: README.md  build-web.sh  init.sh  template.sh
godot/: .gitignore  rust.gdextension
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
