[package]
name = "{YourCrate}" # Part of dynamic library name
version = "0.1.0" # You can leave version and edition as-is for now.
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = { version = "0.2.0", features = ["experimental-wasm", "lazy-function-tables"] }

