[package]
name = "{YourCrate}" # Part of dynamic library name
version = "0.1.0" # You can leave version and edition as-is for now.
edition = "2024"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = { version = "0.3.1", features = ["experimental-wasm", "lazy-function-tables"] }

